name:                japanese-calendar
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Time.JapaneseCalendar
                     , Data.Time.JapaneseCalendar.Internal
  build-depends:       base >= 4.7 && < 5
                     , astro == 0.4.*
                     , time == 1.6.*
  ghc-options:         -Wall -Werror -O
  default-language:    Haskell2010

test-suite japanese-calendar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Time.JapaneseCalendar.InternalSpec
  build-depends:       base
                     , hspec == 2.*
                     , japanese-calendar
                     , time == 1.6.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010
